Deploy/dbapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dbapi
  name: dbapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbapi
  template:
    metadata:
      labels:
        app: dbapi
    spec:
      containers:
      - image: quay.io/two.oes/carinfo-dbapi:latest
        name: dbapi
        ports:
        - containerPort: 8080
