Deploy/dbapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbapi
spec:
  ports:
  - port: 8080
  selector:
    app: dbapi
