Deploy/dbapi/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: dbapi
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  host: carinfo-dbapi.oichman.net
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: ""
    name: dbapi
    weight: null
status: {}
